<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"         
        android:text="@string/txtvw_upload_help"
        android:textSize="28px"
        />     
    <CheckBox
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        />
    <Button
        android:id="@+id/login_google"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_google"
        />
    <TextView  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"         
        android:text="@string/txtvw_benchname"
        />     
    <EditText 
        android:id="@+id/benchName"  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"        
        android:text="@string/default_benchname"
        />          
    <TextView  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        />     
    <EditText 
        android:id="@+id/email"  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"        
        />
    <TextView  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"         
        android:text="@string/txtvw_api"
        />     
    <EditText 
        android:id="@+id/api"  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"         
        />          
    <Button 
        android:id="@+id/send"  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/btn_send_text"
        /> 
</LinearLayout>
