<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2011 0xlab - http://0xlab.org/

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.

  Authored by Julian Chu <walkingice@0xlab.org>
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_path_hint"
            />
        <TextView android:id="@+id/path_selection"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <RelativeLayout android:id="@+id/result_path_pane"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <RadioGroup android:id="@+id/radio_group_path"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton android:id="@+id/radio_sdcard"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
                <RadioButton android:id="@+id/radio_custom"
                    android:text="@string/settings_custom_path"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
            </RadioGroup>
            <Button android:id="@+id/edit_dir"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@id/radio_group_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_edit_path"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>


